modified:   index.html 	modified:   styles.css

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <!-- Hero Section -->
   <section class="hero">
-    <div class="parallax">
+    <div class="hero-img">
       <img src="images/sky.png" alt="Sky Background" class="background">
       <img src="images/girl.png" alt="Girl Foreground" class="foreground">
     </div>
