modified:   index.html 	modified:   styles.css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Revolut Style Design</title>
-  
+
 </head>
 
 <body>
@@ -14,7 +14,7 @@
     <nav>
       <a href="#">Personal</a>
       <a href="#">Business</a>
-      <a href="#">Revolut <18</a>
+      <a href="#">Revolut <18< /a>
           <a href="#">Company</a>
     </nav>
     <div class="auth-buttons">
@@ -64,7 +64,7 @@
 
   <section class="Coin">
     <div>
-      <!-- <span class="coin-png"><img style="height: 90px;" src="images/coin.png" alt="Revolut Coin Image"></span> -->
+      <!-- empty div -->
     </div>
     <div class="content4">
       <h1>GO PLACES WITH REVPOINTS</h1>
@@ -78,10 +78,12 @@
   <section class="savings">
     <div class="content5">
       <h1>ARE YOUR SAVINGS INTEREST-ING?</h1>
-      <p>Let your money make more money with up to 4.75% AER/Gross (variable) <br> interest on savings. Paid every single
+      <p>Let your money make more money with up to 4.75% AER/Gross (variable) <br> interest on savings. Paid every
+        single
         day.</p>
       <p><span class="Tc">AER stands for Annual Equivalent Rate and illustrates what the interest rate would be if
-          interest was <br> paid and compounded once each year. Gross is the interest rate without tax deducted. The interest <br>
+          interest was <br> paid and compounded once each year. Gross is the interest rate without tax deducted. The
+          interest <br>
           rate is variable and subject to your selected plan. T&Cs apply.</span></p>
       <a href="#" class="button">Explore Savings</a> <br>
       <div class="card2">
@@ -91,6 +93,40 @@
     </div>
   </section>
 
+  <section class="join">
+    <div class="content6">
+      <h1>JOIN THE 50+ MILLION USING REVOLUT</h1>
+      <a href="#" class="button">Get Revolut</a>
+      <p><span class="Tc">¹FOR STOCK TRADING: Capital at risk.</span></p>
+      <p><span class="Tc">Revolut Trading Ltd provides a non-advised execution-only service in shares. Revolut Trading
+          Ltd does not provide investment advice or personal recommendations. You, as an individual investor, must make
+          your own decisions, seeking independent professional advice if you are unsure as to the suitability or
+          appropriateness of any investment for your individual circumstances or needs.</span></p>
+      <p><span class="Tc">The value of investments can go up as well as down and you may receive less than your original
+          investment or lose the value of your entire initial investment. Past performance and forecasts are not
+          reliable indicators of future results. Currency rate fluctuations can adversely impact the overall returns on
+          your original investment. Any trades outside of your monthly allowance are charged at the greater of 0.25% of
+          the order amount if you are a Standard, Plus, Premium or Metal customer, or at 0.12% of the order amount if
+          you are an Ultra customer, or the minimum applicable fee of £1. If you are a Trading Pro customer, no minimum
+          fees apply and any trades outside of your monthly allowance are charged at 0.12% of the order amount. Please
+          read more on these fees <a href="#"> here</a>. Further information about the investment service provided by Revolut Trading Ltd
+          can be found in the <a href="#">Terms of Business</a>, <a href="#">Risk Disclosure</a>, and <a href="#"> Invest FAQs</a>.</span></p>
+      <p><span class="Tc">Revolut Trading Ltd (No. 11567840) is a firm authorised and regulated by the Financial Conduct
+          Authority (FRN: 933846). The registered address of Revolut Trading Ltd is at 7 Westferry Circus, Canary Wharf,
+          London, England, E14 4HD.</span></p>
+      <p><span class="Tc">²FOR COMMODITIES: Capital at risk. <br>
+          Revolut Ltd commodities service is not regulated by the FCA and it is not protected or covered by the
+          Financial Ombudsman Service, or the Financial Services Compensation Scheme.
+
+        </span></p>
+      <p><span class="Tc">Revolut Ltd (No. 08804411) is also authorised by the FCA under the Electronic Money
+          Regulations 2011 (Firm Reference 900562). Insurance related-products are arranged by Revolut Travel Ltd which
+          is authorised by the FCA to undertake insurance distribution activities (FCA No: 780586) and by Revolut Ltd,
+          an Appointed Representative of Revolut Travel Ltd in relation to insurance distribution activities. <br>
+          If you would like to find out more about which Revolut entity you receive services from, or if you have any
+          other questions, please reach out to us via the in-app chat in the Revolut app.</span></p>
+    </div>
+  </section>
 
   <link rel="stylesheet" href="styles.css">
   <script src="script.js"></script>
