modified:   index.html 	modified:   styles.css

--- a/index.html
+++ b/index.html
@@ -109,8 +109,10 @@
           the order amount if you are a Standard, Plus, Premium or Metal customer, or at 0.12% of the order amount if
           you are an Ultra customer, or the minimum applicable fee of £1. If you are a Trading Pro customer, no minimum
           fees apply and any trades outside of your monthly allowance are charged at 0.12% of the order amount. Please
-          read more on these fees <a href="#"> here</a>. Further information about the investment service provided by Revolut Trading Ltd
-          can be found in the <a href="#">Terms of Business</a>, <a href="#">Risk Disclosure</a>, and <a href="#"> Invest FAQs</a>.</span></p>
+          read more on these fees <a href="#"> here</a>. Further information about the investment service provided by
+          Revolut Trading Ltd
+          can be found in the <a href="#">Terms of Business</a>, <a href="#">Risk Disclosure</a>, and <a href="#">
+            Invest FAQs</a>.</span></p>
       <p><span class="Tc">Revolut Trading Ltd (No. 11567840) is a firm authorised and regulated by the Financial Conduct
           Authority (FRN: 933846). The registered address of Revolut Trading Ltd is at 7 Westferry Circus, Canary Wharf,
           London, England, E14 4HD.</span></p>
@@ -125,6 +127,51 @@
           an Appointed Representative of Revolut Travel Ltd in relation to insurance distribution activities. <br>
           If you would like to find out more about which Revolut entity you receive services from, or if you have any
           other questions, please reach out to us via the in-app chat in the Revolut app.</span></p>
+    </div>
+  </section>
+
+  <section class="plans">
+    <div class="content7">
+      <h1>Choose Your Plan</h1>
+      <div class="subs1">
+        <div class="sub">
+          <h2>Standard</h2>
+          <h4>Free</h4>
+          <p>Sending money abroad or sticking to a budget with built-in tools, no matter your needs, get more from your
+            money with our Standard account.</p>
+            <span><a href="#">➜</a></span>
+        </div>
+        <div class="sub">
+          <h2>Plus</h2>
+          <h4>£3.99/month</h4>
+          <p>Enjoy extra perks like priority in-app support and everyday spending protection, for less than the price of
+            a coffee. All this and more, with Plus.</p>
+            <span><a href="#">➜</a></span>
+        </div>
+        <div class="sub">
+          <h2>Premium</h2>
+          <h4>£7.99/month</h4>
+          <p>Discover flexible benefits that fit your life at home, and take you all over the globe. Save, spend, send,
+            and invest smarter with Premium</p>
+            <span><a href="#">➜</a></span>
+        </div>
+      </div>
+      <div class="subs2">
+        <div class="sub">
+          <h2>Metal</h2>
+          <h4>£14.99/month</h4>
+          <p>Enjoy higher limits on investments and more, and explore an array of lifestyle enhancing benefits, all on
+            Metal.</p>
+          <span><a href="#">➜</a></span>
+        </div>
+        <div class="sub">
+          <h2>Ultra</h2>
+          <h4>£45/month (Introductory offer)</h4>
+          <p>Experience the exceptional, featuring exclusive lifestyle benefits, world-class travel, and a precision
+            engineered, platinum-plated card.</p>
+            <span><a href="#">➜</a></span>
+        </div>
+      </div>
     </div>
   </section>
 
