modified:   index.html 	modified:   styles.css

--- a/index.html
+++ b/index.html
@@ -139,21 +139,21 @@
           <h4>Free</h4>
           <p>Sending money abroad or sticking to a budget with built-in tools, no matter your needs, get more from your
             money with our Standard account.</p>
-            <span><a href="#">➜</a></span>
+          <span><a href="#">➜</a></span>
         </div>
         <div class="sub">
           <h2>Plus</h2>
           <h4>£3.99/month</h4>
           <p>Enjoy extra perks like priority in-app support and everyday spending protection, for less than the price of
             a coffee. All this and more, with Plus.</p>
-            <span><a href="#">➜</a></span>
+          <span><a href="#">➜</a></span>
         </div>
         <div class="sub">
           <h2>Premium</h2>
           <h4>£7.99/month</h4>
           <p>Discover flexible benefits that fit your life at home, and take you all over the globe. Save, spend, send,
             and invest smarter with Premium</p>
-            <span><a href="#">➜</a></span>
+          <span><a href="#">➜</a></span>
         </div>
       </div>
       <div class="subs2">
@@ -169,10 +169,83 @@
           <h4>£45/month (Introductory offer)</h4>
           <p>Experience the exceptional, featuring exclusive lifestyle benefits, world-class travel, and a precision
             engineered, platinum-plated card.</p>
-            <span><a href="#">➜</a></span>
+          <span><a href="#">➜</a></span>
         </div>
       </div>
     </div>
+  </section>
+
+  <section class="hero-footer">
+    <footer>
+      <h2>What are you waiting for?</h2>
+      <h1>Change the way you money</h1>
+      <button>Learn More</button>
+    </footer>
+
+    <div class="subfooter">
+      <div class="footer-container">
+        <div class="footer-section">
+          <h3>Security</h3>
+          <ul>
+            <li><a href="#">How we protect your money</a></li>
+            <li><a href="#">About Fraud and Scams</a></li>
+            <li><a href="#">Security Bugs</a></li>
+            <li><a href="#">Consumer Security Insight Report</a></li>
+          </ul>
+        </div>
+        <div class="footer-section">
+          <h3>Accounts</h3>
+          <ul>
+            <li><a href="#">Joint Accounts</a></li>
+            <li><a href="#">Savings</a></li>
+            <li><a href="#">Pro for Freelance</a></li>
+            <li><a href="#">Contract</a></li>
+          </ul>
+        </div>
+        <div class="footer-section">
+          <h3>Help</h3>
+          <ul>
+            <li><a href="#">Customer Help</a></li>
+            <li><a href="#">Contact Us</a></li>
+            <li><a href="#">System Status</a></li>
+            <li><a href="#">Developers API</a></li>
+          </ul>
+        </div>
+        <div class="footer-section">
+          <h3>Daily Finances</h3>
+          <ul>
+            <li><a href="#">Cards</a></li>
+            <li><a href="#">Payments</a></li>
+            <li><a href="#">Linked Accounts</a></li>
+            <li><a href="#">Budgeting & Analytics</a></li>
+          </ul>
+        </div>
+        <div class="footer-section">
+          <h3>Plans</h3>
+          <ul>
+            <li><a href="#">Standard</a></li>
+            <li><a href="#">Plus</a></li>
+            <li><a href="#">Premium</a></li>
+            <li><a href="#">Metal</a></li>
+          </ul>
+        </div>
+        <div class="footer-section">
+          <h3>Lifestyle</h3>
+          <ul>
+            <li><a href="#">Stays & Experiences</a></li>
+            <li><a href="#">eSIM Data Plans</a></li>
+            <li><a href="#">RevPoints</a></li>
+            <li><a href="#">Insurance</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
+  
+  <section class="last-footer">
+    <div class="content10">
+    <p><span class="Tc"> © Revolut Ltd 2025 </span></p>
+  </div>
   </section>
 
   <link rel="stylesheet" href="styles.css">
