modified:   index.html 	modified:   script.js 	modified:   styles.css

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <nav>
       <a href="#">Personal</a>
       <a href="#">Business</a>
-      <a href="#">Revolut <18< /a>
-          <a href="#">Company</a>
+      <a href="#">Revolut 18></a>
+      <a href="#">Company</a>
     </nav>
     <div class="auth-buttons">
       <a href="#" class="login">Log in</a>
@@ -241,11 +241,11 @@
       </div>
     </div>
   </section>
-  
+
   <section class="last-footer">
     <div class="content10">
-    <p><span class="Tc"> © Revolut Ltd 2025 </span></p>
-  </div>
+      <p><span class="Tc"> © Revolut Ltd 2025 </span></p>
+    </div>
   </section>
 
   <link rel="stylesheet" href="styles.css">
