modified:   index.html 	modified:   script.js 	modified:   styles.css

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <!-- Navbar -->
-  <header class="navbar">
+  <header class="navbar" id="navbar">
     <div class="logo">Revolut</div>
     <nav>
       <a href="#">Personal</a>
@@ -58,7 +58,7 @@
       <p>Get the one that matches your vibe.</p>
       <p><span class="Tc">Some cards are only available on subscription plans. Fees may apply.</span></p>
       <a href="#" class="button">Choose Your Card</a> <br>
-      <video src="images/Checkoutvid.mp4"></video>
+      <video autoplay loop muted src="images/Checkoutvid.mp4"></video>
     </div>
   </section>
 
